# agent-readiness-score

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: ci-integration.md  extending.md  index.md  installation.md  scoring-system.md  usage.md
docs/categories/: build.md  dependencies.md  devenv.md  documentation.md  observability.md  style.md  testing.md  typing.md
examples/: README.md  github-action.yml  sample-output.json
src/agent_readiness_score/: __init__.py  __main__.py  cli.py
src/agent_readiness_score/core/: __init__.py  detector.py  engine.py  language.py  models.py  registry.py  scanner.py
src/agent_readiness_score/output/: __init__.py  console.py  json_output.py
src/agent_readiness_score/scanners/: __init__.py  build.py  dependencies.py  devenv.py  documentation.py  observability.py  style.py  testing.py  typing.py
tests/: __init__.py  conftest.py  test_cli.py  test_engine.py  test_scanners.py
